--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,29 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+ /* Mobile responsive - fino a 480x */
+ @media screen and (max-width: 480px) {
+    .lessons .col,
+    .steps .col,
+    .why-us .col-left,
+    .why-us .col-right {
+        width: 100%;
+        margin: 50px 0;
+    }
+    .why-us {
+        padding: 3rem 0;
+        margin-bottom: 0;
+        background-color: rgb(34, 34, 34)
+    }
+    .steps {
+        margin: 0;
+    }
+    .container {
+        width: 100%;
+    }
+    .row {
+        display: block;
+    }
+    
+ }
