--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ img {
     .steps .col,
     .why-us .col-left,
     .why-us .col-right {
-        width: 100%;
+        width: 100vw;
         margin: 50px 0;
     }
     .why-us {
@@ -152,4 +152,11 @@ img {
         display: block;
     }
     
+ }
+
+ /* Tablet responsive - fino a 768px */
+ @media screen and (max-width: 768px) {
+    .container {
+        width: 100vw;
+    }
  }
