--- a/css/style.css
+++ b/css/style.css
@@ -162,8 +162,8 @@ img {
  }
 
  /* Bonus - browser responsive, da 768px in poi */
- @media screen and (min-width: 768px) {
+ @media screen and (min-width: 768px) and (max-width: 1140px) {
     .container {
-        width: 80%;
+        width: 100%;
     }
  }
